--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "formik": "^2.2.5",
     "react": "^17.0.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -24,7 +25,8 @@
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.10.1"
+    "react-navigation-stack": "^2.10.1",
+    "yup": "^0.31.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
